<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarRegistroActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileIv"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_photo_black"
        app:civ_border_color="@color/colorGray1"
        app:civ_border_overlay="true"
        app:civ_border_width="1dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/nombreEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileIv"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shape_rectangle"
        android:hint="@string/nombre_product"
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp" />


    <EditText
        android:id="@+id/marcaEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombreEt"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shape_rectangle"
        android:hint="@string/marca_product"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/categoriaEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/marcaEt"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shape_rectangle"
        android:hint="@string/categoria_product"
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp" />

    <EditText
        android:id="@+id/precioEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoriaEt"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/shape_rectangle"
        android:hint="@string/precio_product"
        android:inputType="numberDecimal"
        android:padding="10dp" />


    <EditText
        android:id="@+id/stockEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/precioEt"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shape_rectangle"
        android:gravity="start"
        android:hint="@string/stock_product"
        android:inputType="number"
        android:padding="10dp" />

    <!-- FAB: Agregar Registro-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_done_white" />


</RelativeLayout>