<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="20dp"
    cardCornerRadius="6dp"
    android:elevation="6dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_img_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/brand_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_text"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@+id/circle_img_view"
            android:gravity="end"
            android:text="@string/product_brand"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAllCaps="false"
            android:textColor="@color/bakels_primary"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/circle_img_view"
            android:layout_marginLeft="15dp"/>


        <TextView
            android:id="@+id/category_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/brand_text"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@+id/circle_img_view"
            android:gravity="end"
            android:text="@string/product_category"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/price_text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_text"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/circle_img_view"
            android:drawableStart="@drawable/money18_icon"
            android:gravity="center_vertical"
            android:text="@string/product_price"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/stock_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_text"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/price_text"
            android:gravity="end"
            android:text="@string/product_stock"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="15dp"
            android:layout_below="@id/circle_img_view"
            android:orientation="horizontal">
            <Button
                android:id="@+id/edit_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="Edit"
                android:textAllCaps="false" />
        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>