<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:paddingTop="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_person_black"
            android:layout_centerVertical="true"
            app:civ_border_color="@color/colorGray"
            app:civ_border_overlay="true"
            app:civ_border_width="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/moreBtn"
            android:layout_toLeftOf="@id/moreBtn"
            android:layout_toEndOf="@id/profileIv"
            android:layout_toRightOf="@id/profileIv"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:layout_marginVertical="5dp"
                android:stretchColumns="2">


                <!--Nombre de Usuario-->

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/nombre_product"
                        android:singleLine="false"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/nombreTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:gravity="center_vertical"
                        android:text="@string/nombre_product"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/marca_product"
                        android:textSize="12sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/marcaTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/marca_product"
                        android:textColor="@color/black" />
                </TableRow>


                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/categoria_product"
                        android:textSize="12sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/categoriaTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/categoria_product"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/precio_product"
                        android:textSize="12sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/precioTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/precio_product"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/stock_product"
                        android:textSize="12sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/stockTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stock_product"
                        android:textColor="@color/black" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <!--Para mostrar opciones como eliminar, editar, etc.-->
        <ImageButton
            android:id="@+id/moreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:src="@drawable/ic_more_black" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>